# GUI_Robot

./: PATHPLANNER_COMPLETE_GUIDE.md  PATHPLANNER_FIXES.md  PATHPLANNER_FIXES_V2.md  PATHPLANNER_GUI_REFERENCE.md  PATHPLANNER_INTEGRATION.md  PATHPLANNER_QUICK_REFERENCE.md  PATHPLANNER_SMART_EXECUTION.md  build.gradle  shuffleboard.json
RobotPathPlanner/: CMakeLists.txt  ENHANCED_FEATURES_GUIDE.md  FIXES_COMPLETE_GUIDE.md  NEW_FEATURES.md  QUICKSTART.md  QUICK_BUILD_WINDOWS.md  README.md  WINDOWS_INSTALL_GUIDE.md
RobotPathPlanner/examples/: ExampleRobotUsage.cpp  README.md  RobotIntegration.cpp  RobotIntegration.h
RobotPathPlanner/include/: Geometry.h  LineDialog.h  MainWindow.h  MapCanvas.h  MapData.h  PathData.h  RobotComm.h  WaypointDialog.h
RobotPathPlanner/src/: Geometry.cpp  LineDialog.cpp  MainWindow.cpp  MapCanvas.cpp  MapData.cpp  PathData.cpp  RobotComm.cpp  WaypointDialog.cpp  main.cpp
src/main/base_controller/include/: Movement.h  PID.h  dfs.h
src/main/base_controller/src/: Movement.cpp
src/main/camera/include/: Camera.h
src/main/camera/src/: Camera.cpp
src/main/core/include/: Constants.h  Functions.h  Robot.h  main.h  procedures.h
src/main/core/src/: Functions.cpp  Inspection.cpp  MainTask.cpp  Navigation.cpp  PathPlannerTest.cpp  SimpleTask.cpp  main.cpp  procedures.cpp
src/main/oms/include/: Oms.h
src/main/oms/src/: Oms.cpp
src/main/pathplanner/include/: PathPlannerComm.h
src/main/pathplanner/src/: PathPlannerComm.cpp
src/main/sensors/include/: Sensors.h  lidar.h
src/main/sensors/src/: lidar.cpp  sensors.cpp
src/main/teleop/include/: ManualDrive.h  OI.h
src/main/teleop/src/: ManualDrive.cpp  OI.cpp
src/main/vmxpi/include/: Hardware.h
src/main/vmxpi/src/: Hardware.cpp
